# squid-game-solver

./: .gitignore  Dockerfile  README.md
client/: index.html
cpp/: CMakeLists.txt
cpp/src/: bridge.cpp  bridge.h  card.cpp  card.h  hand_eval.cpp  hand_eval.h  marker.cpp  marker.h
go/: go.mod  main.go
go/bridge/: cgo_bridge.go
go/models/: types.go
go/server/: websocket.go
